tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__11Dimethylhydraz-AAAAAAAAAAAAAAAAAAADWA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 856,
  "prerequisites": [
    857
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Use your Formaldehyde to make 1,1-Dimethylhydrazine. You need to combine it with some Hydrazine and Hydrogen along with a Formaldehyde Catalyst in a Chemical Plant.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§l1,1-Dimethylhydrazine",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    857
  ],
  "rewards": [],
  "tasks": []
}
