tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__2Ethylanthrahydr-AAAAAAAAAAAAAAAAAAAKgg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2690,
  "prerequisites": [
    2691,
    2878
  ],
  "properties": {
    "auto_claim": false,
    "desc": "To make this complicated sounding chemical, combine the similarly named 2-Ethylanthraquinone and Hydrogen along with an Orange Catalyst in the Chemical Plant.\n\n[note]You need Palladium to make the Catalyst, so keep that in mind.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§l2-Ethylanthrahydroquinone",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2691,
    2878
  ],
  "rewards": [],
  "tasks": []
}
