tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__ABetterWayToGene-wB7bY61aRE6Fh0VOZjeclQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12491371619978550421,
  "prerequisites": [
    1535
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This is an all-in-one solution to generate oxygen. Just provide power (continuous) and Seeds (once).",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Better Way To Generate Oxygen",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1535
  ],
  "rewards": [],
  "tasks": []
}
