tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__AReward-AAAAAAAAAAAAAAAAAAAA1g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 214,
  "prerequisites": [
    1433
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You have really come a long way to get here! However, getting to the moon is just the start of your journey, as you'll have access to even more powerful and awesome stuff. You have proven yourself worthy, and mastered the challenges to get here. Congratulations!\n\nPick one of the reward quests below.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Reward",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1433
  ],
  "rewards": [],
  "tasks": []
}
