tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__AT0RocketWhat-Oiy66UDmTVeZ95pN0yunBg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 4676510302671185670,
  "prerequisites": [
    10274197374371129763,
    4895769479789173733,
    14993694219146994765
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You can't use this rocket to go to any planet or moon §oand§r it's the most expensive one - a bad deal? Not quite! The Shuttle Rocket is used to create and access a §1§lMothership§r.\n\nThe Shuttle Rocket needs the same fuel as the T8 Rocket.\n\n[note]In case you forgot to complete any, holding the rocket in your hand will unlock all pre-requisite quests in addition to this one.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A T0 Rocket? What?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    10274197374371129763,
    4895769479789173733,
    14993694219146994765
  ],
  "rewards": [],
  "tasks": []
}
