tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__Airlocks-AAAAAAAAAAAAAAAAAAAFuQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1465,
  "prerequisites": [
    1467
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An airlock is an airtight door used to provide a passage between enclosed rooms and between an enclosed room and outer space. It is made from Air Lock Frames and one Air Lock Controller.\n\nThe airlock will keep air inside the room while it is closed. But when the airlock is open, the room is no longer sealed and oxygen gear must be worn until the airlock is closed. In environments with extreme temperatures, Thermal Padding must also be worn.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Airlocks",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1467
  ],
  "rewards": [],
  "tasks": []
}
