tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__SpaceRace-AAAAAAAAAAAAAAAAAAAAIg==__AstroMiner-AAAAAAAAAAAAAAAAAAAFqg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1450,
  "prerequisites": [
    1447
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Astro Miner is an automatic mining vehicle which moves around, makes tunnels, mines up everything it finds, and brings it all back to a base station where it docks. It is not player-rideable, so don't try and climb inside it!\n\nIt's not very fast or efficient, and it seems to discard half or more of the ore it attempts to collect. Only consider using it if you want the huge amount of planet blocks it picks up.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Astro Miner",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1447
  ],
  "rewards": [],
  "tasks": []
}
